
FILE(GLOB SRCS *.cpp)
FILE(GLOB HDRS *.h)

SOURCE_GROUP("" FILES ${SRCS} ${HDRS})

ADD_LIBRARY(ft8xxemu_platform
  ${SRCS}
  ${HDRS}
)

IF (MINGW)
  TARGET_LINK_LIBRARIES(ft8xxemu_platform
    avrt dinput8 dxguid)
ENDIF (MINGW)

IF (WITH_SDL2)
  TARGET_LINK_LIBRARIES(ft8xxemu_platform
    ${SDL2_LIBRARY}
    ${OPENGL_gl_LIBRARY}
    gl3w
  )
ENDIF ()

TARGET_LINK_LIBRARIES(ft8xxemu_platform
)

IF (CMAKE_COMPILER_IS_GNUCXX AND !WIN32)
  SET_TARGET_PROPERTIES(ft8xxemu_platform PROPERTIES COMPILE_FLAGS -fPIC)
ENDIF ()
