
FILE(GLOB SRCS ../ft8xxemu/*.cpp)
FILE(GLOB HDRS ../ft8xxemu/*.h)

ADD_LIBRARY(ft8xxemu_static
  ${SRCS}
  ${HDRS}
)

IF (WITH_FT800EMU)
  TARGET_LINK_LIBRARIES(ft8xxemu_static
    ft800emu
  )
ENDIF (WITH_FT800EMU)

IF (WITH_FT810EMU)
  TARGET_LINK_LIBRARIES(ft8xxemu_static
    ft810emu
  )
ENDIF (WITH_FT810EMU)

SET_TARGET_PROPERTIES(ft8xxemu_static PROPERTIES
  COMPILE_DEFINITIONS "FT8XXEMU_STATIC")
