
FILE(GLOB SRCS *.cpp)
FILE(GLOB HDRS *.h)

ADD_LIBRARY(libft900emu
	${SRCS}
	${HDRS}
	)

# SDL Required
FIND_PACKAGE(SDL)
if (NOT SDL_FOUND)
	MESSAGE(FATAL_ERROR "SDL not found!")
endif (NOT SDL_FOUND)

INCLUDE_DIRECTORIES(
	${SDL_INCLUDE_DIR}
	)

TARGET_LINK_LIBRARIES(libft900emu
	${SDL_LIBRARY}
	)

