
FILE(GLOB SRCS *.cpp)
FILE(GLOB HDRS *.h)

ADD_LIBRARY(ftemutest
  ${SRCS}
  ${HDRS}
)

TARGET_LINK_LIBRARIES(ftemutest
	bt8xxemu)

ADD_SUBDIRECTORY(snapshot)
ADD_SUBDIRECTORY(touchtfr)
ADD_SUBDIRECTORY(vertextrans)
ADD_SUBDIRECTORY(cmdb)
ADD_SUBDIRECTORY(playvideo)
ADD_SUBDIRECTORY(loadimage)
ADD_SUBDIRECTORY(fifoimage)
ADD_SUBDIRECTORY(paletted)
ADD_SUBDIRECTORY(setfont)
ADD_SUBDIRECTORY(sketch)
ADD_SUBDIRECTORY(l2)
ADD_SUBDIRECTORY(gradient)
ADD_SUBDIRECTORY(reschange)
ADD_SUBDIRECTORY(pnglogo)

IF (WITH_SAMPLEAPP)
  ADD_SUBDIRECTORY(sampleapp)
ENDIF (WITH_SAMPLEAPP)

IF (WITH_QT)
  ADD_SUBDIRECTORY(coprocdiff)
ENDIF (WITH_QT)
