
FILE(GLOB SRCS *.cpp *.c)
FILE(GLOB HDRS *.h)
FILE(GLOB RSCS *.rc)

ADD_LIBRARY(mx25lemu SHARED
  ${SRCS}
  ${HDRS}
  ${RSCS}
)

IF (MINGW)
  TARGET_LINK_LIBRARIES(mx25lemu
    shlwapi
  )
  SET_TARGET_PROPERTIES(mx25lemu PROPERTIES
    PREFIX "")
ENDIF (MINGW)

SET_TARGET_PROPERTIES(mx25lemu PROPERTIES
  COMPILE_DEFINITIONS "BT8XXEMU_FLASH_LIBRARY")
