
FILE(GLOB SRCS *.cpp)
FILE(GLOB HDRS *.h)

ADD_EXECUTABLE(ftqtsample
	${SRCS}
	${HDRS}
	)

TARGET_LINK_LIBRARIES(ftqtsample
	libft800emu
	)

IF (WITH_SDL)

  # SDL base package
  FIND_PACKAGE(SDL)
  IF (NOT SDL_FOUND)
    MESSAGE(FATAL_ERROR "SDL not found!")
  ENDIF (NOT SDL_FOUND)
  INCLUDE_DIRECTORIES(
    ${SDL_INCLUDE_DIR}
    ${INCLUDE_DIRECTORIES}
    )
  TARGET_LINK_LIBRARIES(ftqtsample
    ${SDL_LIBRARY}
    ${TARGET_LINK_LIBRARIES}
    )

  SET(CMAKE_C_FLAGS "-DFT800EMU_SDL ${CMAKE_C_FLAGS}" CACHE STRING "" FORCE)
  SET(CMAKE_CXX_FLAGS "-DFT800EMU_SDL ${CMAKE_CXX_FLAGS}" CACHE STRING "" FORCE)

ENDIF (WITH_SDL)

# Instruct CMake to run moc automatically when needed.
SET(CMAKE_AUTOMOC ON)

# Find the QtWidgets library
FIND_PACKAGE(Qt5Widgets)

TARGET_LINK_LIBRARIES(ftqtsample
  Qt5::Widgets
  ${TARGET_LINK_LIBRARIES}
)

ADD_DEFINITIONS(-DFT800EMU_REFERENCE_DIR="${FT800_REFERENCE_DIR}")

